--- a/README
+++ b/README
@@ -1,5 +1,20 @@
-Chainer implementation of the paper Robust Conditional GAN:
+# Robust Conditional GAN
+Chainer implementation of the paper Robust Conditional GAN
 https://openreview.net/forum?id=Byg0DsCqYQ
+	
 
-The code is highly influenced from https://github.com/pfnet-research/sngan_projection
+To train the network, e.g. with cgan, you can call it like this: 
+``` 
+python jobs/rocgan/train_mn.py '--config jobs/rocgan/iclr_5layer_cgan.yml' 
+```
+
+The results are improved over the original ICLR publication; those results and
+pretrained files correspond to the journal version of the code (currently under
+review).
+
+Tested with chainer=4.0.0, chainercv=0.9.0 on a Linux machine.
+The code is highly influenced from [1].
+
+
+[1] https://github.com/pfnet-research/sngan_projection
 
